--- a/index.html
+++ b/index.html
@@ -6,18 +6,22 @@
 </head>
 <body>
 	<ul id="navigation">
-		<li>Home</li>
-		<li>Gaming</li>
-		<li>Om</li>
+		<li>HTML</li>
+		<li>Billeder</li>
+		<li>Tekst</li>
+		<li>YouTube videoer</li>
 	</ul>
 	<section>
-		<h1>Home</h1>
+		<h1>HTML</h1>
 	</section>
 	<section>
-		<h1>Gaming</h1>
+		<h1>Billeder</h1>
 	</section>
 	<section>
-		<h1>Om</h1>
+		<h1>Tekst</h1>
+	</section>
+	<section>
+		<h1>YouTube videoer</h1>
 	</section>
 
 	<script type="text/javascript" src="navigation/navigation.js"></script>
