Adds title body explanations

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
-	<title>Mit website</title>
+	<title>Coding Pirates HTML</title>
+	<meta charset="utf-8" />
 	<link rel="stylesheet" type="text/css" href="navigation/navigation.css" />
 	<link rel="stylesheet" type="text/css" href="style.css" />
 </head>
@@ -13,6 +14,25 @@
 	</ul>
 	<section>
 		<h1>HTML</h1>
+		<p>Hvis du vil starte en ny hjemmeside skal du lave en tekst fil med følgende tekst</p>
+		<pre>
+&lt;html&gt;
+	&lt;head&gt;
+		&lt;title&gt;&lt;/title&gt;
+	&lt;/head&gt;
+	&lt;body&gt;
+
+	&lt;/body&gt;
+&lt;/html&gt;
+		</pre>
+		<h2>Titel på din hjemmeside</h2>
+		<p>Titlen på en hjemmeside kan man se oppe i browseren. Title på denne side er <strong>Coding Pirates HTML</strong></p>
+		<p>Få at ændre title på din hjemmeside skal du skrive den mellem &lt;title&gt; og &lt;/title&gt;</p>
+		<h3>Eksempel</h3>
+		<pre>&lt;title&gt;Min hjemmeside&lt;/title&gt;</pre>
+		<h2>Indhold på din hjemmeside</h2>
+		<p>Alt det du gerne vil vise på din hjemmeside som for eksempel tekst, billeder eller videoer, skal skrives mellem &lt;body&gt; og &lt;/body&gt;</p>
+
 	</section>
 	<section>
 		<h1>Billeder</h1>
